[package]
name = "missile-game"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = "1.0.197"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db =  { version = "0.43.0", features = ["postgres"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = "1.28.2"
